scripts/nullaway/annotator/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8.txt
../annotator/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/OptimizationVisitor.java:89: error: [NullAway] dereferenced expression oldString is @Nullable
    while (i < oldString.length())
                        ^
    (see http://t.uber.com/nullaway )
../annotator/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:135: error: [NullAway] initializer method does not guarantee @NonNull fields array (line 28), procedures (line 30) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public AnimationVisitor(String windowName)
         ^
    (see http://t.uber.com/nullaway )
../annotator/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/FilePrinter.java:11: error: [NullAway] @NonNull static field outBuffer not initialized
  static BufferedWriter outBuffer;
                        ^
    (see http://t.uber.com/nullaway )
3 errors
